--- a/FIXparsing/pom.xml
+++ b/FIXparsing/pom.xml
@@ -71,7 +71,6 @@
         <slf4j_version>1.7.28</slf4j_version>
 
         <!-- libs: testing -->
-        <junit_version>4.12</junit_version>
         <junit5_jupiter_version>5.6.2</junit5_jupiter_version>
         <mockito_version>3.2.0</mockito_version>
     </properties>
@@ -87,6 +86,16 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.truth.extensions</groupId>
+            <artifactId>truth-java8-extension</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,6 +106,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
 
@@ -387,12 +401,6 @@
             </dependency>
 
             <!-- libs: testing -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit_version}</version>
-                <scope>test</scope>
-            </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
