Add XMLfixMessageParser to read parameters from XMLfile

--- a/FIXparsing/pom.xml
+++ b/FIXparsing/pom.xml
@@ -76,6 +76,13 @@
     </properties>
 
     <dependencies>
+        <!-- dom4j -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
@@ -416,6 +423,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
