--- a/FIXparsing/pom.xml
+++ b/FIXparsing/pom.xml
@@ -89,7 +89,12 @@
             <artifactId>javax.json</artifactId>
             <version>1.0.4</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/info.picocli/picocli -->
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -137,6 +142,7 @@
 
         <pluginManagement>
             <plugins>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
