--- a/FIXparsing/pom.xml
+++ b/FIXparsing/pom.xml
@@ -78,9 +78,9 @@
     <dependencies>
         <!-- dom4j -->
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
+            <version>2.0.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
@@ -128,31 +128,37 @@
         <sourceDirectory>src</sourceDirectory>
         <testSourceDirectory>test</testSourceDirectory>
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-        </plugins>
-
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.0.0</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <!--程序入口-->
+                                <mainClass>com.example.fixparsing.FixParseApp</mainClass>
+                            </manifest>
+                            <manifestEntries>
+                                <Class-Path>lib/*.jar</Class-Path>
+                            </manifestEntries>
+                        </archive>
+                        <descriptorRefs>
+                            <!--文件名后缀-->
+                            <descriptorRef>jar-with-dependencies</descriptorRef>
+                        </descriptorRefs>
+                        <descriptors>
+                            <!--assembly配置文件路径，注意需要在项目中新建文件assembly/release.xml-->
+                            <descriptor>assembly/release.xml</descriptor>
+                        </descriptors>
+                    </configuration>
+                </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${maven_plugin_jar_version}</version>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>${maven_plugin_assembly_version}</version>
                 </plugin>
 
                 <plugin>
